--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ env_logger = { version = "0.11", optional = true }
 
 [build-dependencies]
 log = "0.4"
-zip = "2"
+zip = { version = "2", default-features = false, features = ["deflate", "deflate-flate2"] }
 flate2 = "1"
 tar = "0.4"
 sha1 = "0.10"
